<resources>
    <string name="app_name">教室管理</string>
    <string name="check">查询</string>
    <string name="apply">申请</string>
    <string name="myinfo">我的</string>
    <string name="number">账号:</string>
    <string name="password">密码:</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="login_of_student">学生登陆</string>
    <string name="login_of_admin">管理员登陆</string>
    <string name="no_course">无课时间表</string>
    <string name="ip">192.168.1.103</string>
    <string name="title_activity_regist2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Regist</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
