<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/tabhost"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">



                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/spinner_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_no_course"
                            android:text="@string/no_course"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </LinearLayout>



                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <DatePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/datePicker"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textview_applyInfo"
                            android:text="教室号:"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:id="@+id/edittext_room_number"
                            android:hint="例:5108"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <Spinner
                            android:id="@+id/spinner_jie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></Spinner>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_check"
                            android:text="@string/check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/button_apply"
                            android:text="@string/apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edit_descripstion"
                        android:hint="请说明理由"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>



                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_number"
                            android:text="nothing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/button_calcel"
                            android:text="取消申请"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>


</RelativeLayout>
